src-tauri/abilities-runtime/tests/trybuild/boundary/prepare_meeting_wrapper_shape.stderr
error: ability bodies cannot bypass the ServiceContext boundary; detected: std::fs::write
  --> tests/trybuild/boundary/prepare_meeting_wrapper_shape.rs:43:10
   |
43 | async fn prepare_meeting_wrapper_shape(
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
